--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,7 +31,7 @@ dependencies:
   qrscan: ^0.2.17
   image_picker: ^0.6.7+14
   pie_chart: ^4.0.1
-
+  smooth_star_rating: 1.1.1  
 dev_dependencies:
   flutter_test:
     sdk: flutter
