--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,9 @@ dependencies:
   qrscan: ^0.2.17
   image_picker: ^0.6.7+14
   pie_chart: ^4.0.1
+  percent_indicator: "^2.1.7+2"
+  snaplist: ^0.1.8
+
   url_launcher:
   
 dev_dependencies:
