--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,10 +33,11 @@ dependencies:
   pie_chart: ^4.0.1
   percent_indicator: "^2.1.7+2"
   snaplist: ^0.1.8
-
   url_launcher:
   http:
   provider:
+  cached_network_image:
+  shimmer:
   
 dev_dependencies:
   flutter_test:
