--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,29 +23,25 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
+  cached_network_image:
   cupertino_icons: ^1.0.0
-  qrscan: ^0.2.17
+  http:
   image_picker: ^0.6.7+14
+  percent_indicator: ^2.1.7+2
   pie_chart: ^4.0.1
-  percent_indicator: "^2.1.7+2"
+  provider:
+  qrscan: ^0.2.17
+  shared_preferences: ^0.5.12+4
+  shimmer:
   snaplist: ^0.1.8
   url_launcher:
-  http:
-  provider:
-  cached_network_image:
-  shimmer:
-  
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
-
 # The following section is specific to Flutter.
 flutter:
 
@@ -58,13 +54,10 @@ flutter:
   assets:
     - images/
   #   - images/a_dot_ham.jpeg
-
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
-
   # For details regarding adding assets from package dependencies, see
   # https://flutter.dev/assets-and-images/#from-packages
-
   # To add custom fonts to your application, add a fonts section here,
   # in this "flutter" section. Each entry in this list should have a
   # "family" key with the font family name, and a "fonts" key with a
