added maps dependency, api key and code but still not working

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   shimmer:
   snaplist: ^0.1.8
   url_launcher:
+  google_maps_flutter: ^1.0.3
 
 dev_dependencies:
   flutter_test:
