--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   snaplist: ^0.1.8
   url_launcher:
   google_maps_flutter: ^1.0.3
+  firebase_core: ^0.5.3
+  firebase_storage: ^5.2.0
   firebase_messaging: ^7.0.3
 
 dev_dependencies:
