--- a/android/build.gradle
+++ b/android/build.gradle
@@ -11,6 +11,11 @@ buildscript {
         classpath 'com.google.gms:google-services:4.3.5'
     }
 }
+gradle.projectsEvaluated {
+    tasks.withType(JavaCompile){
+        options.compilerArgs << "-Xlint:deprecation"
+    }
+}
 
 allprojects {
     repositories {
