added notifications subscrption

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -50,8 +50,8 @@
             android:name="flutterEmbedding"
             android:value="2" />
         <service
-            android:name=".service.MyFirebaseMessagingService"
-            >
+            android:name=".java.MyFirebaseMessagingService"
+            android:exported="false">
             <intent-filter>
                 <action android:name="com.google.firebase.MESSAGING_EVENT" />
             </intent-filter>
