--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,7 +40,7 @@ dependencies:
   firebase_messaging: ^7.0.3
   carousel_slider: ^2.3.1
   url_launcher: ^5.7.10
-
+  flutter_rating_bar: ^3.2.0+1
 dev_dependencies:
   flutter_test:
     sdk: flutter
