--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   carousel_slider: ^2.3.1
   url_launcher: ^5.7.10
   flutter_rating_bar: ^3.2.0+1
+  onesignal_flutter: ^2.0.0
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
