--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -63,6 +63,11 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - images/
+    - images/home/
+    - images/head_home/
+    - images/admin_home/
+    - images/drawer/
+
   #   - images/a_dot_ham.jpeg
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
